docs: 添加TI Radar Academy官方教程参考
新增内容:
- E.1: 添加Radar Academy到资料来源表(C:\ti\radar_academy_3_10_00_1)
- E.2.6: 新增TI Radar Academy官方教程索引(6个模块)
  - tracking.html: GTRACK算法详解 ⭐⭐⭐⭐⭐ (第9章)
  - motion_presence_detection.html: 存在检测状态机 ⭐⭐⭐⭐⭐ (第2章)
  - radar_data.html: 雷达数据格式 ⭐⭐⭐⭐ (第1/2章)
- E.3: 更新章节对应表,第2/9章添加Radar Academy引用

--- a/项目文档/3-固件工具/08-AWRL6844雷达健康检测实现方案/AWRL6844雷达健康检测-03-实施目录大纲.md
+++ b/项目文档/3-固件工具/08-AWRL6844雷达健康检测实现方案/AWRL6844雷达健康检测-03-实施目录大纲.md
@@ -1443,8 +1443,10 @@ AWRL6844_HealthDetect/
 |---------|------|------|
 | **07-跌倒检测研究** | `项目文档/3-固件工具/07-跌倒检测研究/` | xWRL6432迁移+算法参考 |
 | **知识库Pose_And_Fall** | `知识库/Pose_And_Fall_Detection/` | 源码+数据集+模型 |
+| **知识库PDF转机器可读文件** | `知识库/知识库PDF转机器可读文件/` | TI官方文档(53个MD文件) |
 | **SDK InCabin Demo** | `C:\ti\radar_toolbox\...\AWRL6844_InCabin_Demos/` | 基础工程 |
 | **MMWAVE_L_SDK** | `C:\ti\MMWAVE_L_SDK_06_01_00_01/` | SDK库+工具 |
+| ⭐ **TI Radar Academy** | `C:\ti\radar_academy_3_10_00_1/` | **雷达基础教程+算法讲解** |
 
 ---
 
@@ -1545,19 +1547,62 @@ AWRL6844_HealthDetect/
 
 ---
 
+### E.2.6 ⭐ TI Radar Academy 官方教程（新增）
+
+> **位置**：`C:\ti\radar_academy_3_10_00_1\_build_radar_academy_3_10_00_1\source\`
+> **重要性**：TI官方雷达培训教程，包含算法原理讲解和配图！
+
+#### 核心模块索引
+
+| 模块文件 | 内容概述 | 参考价值 | 适用章节 |
+|---------|---------|---------|---------|
+| `algorithms/tracking.html` | **GTRACK算法详解**：聚类、卡尔曼滤波、状态机流程 | ⭐⭐⭐⭐⭐ **最高** | 📖 **第9章核心**：人数跟踪算法原理 |
+| `algorithms/motion_presence_detection.html` | **存在检测状态机**：Empty/Minor/Major状态切换、majorStateCfg/minorStateCfg参数 | ⭐⭐⭐⭐⭐ **最高** | 📖 **第2章核心**：人存检测算法、状态机参数调优 |
+| `introduction/radar_data.html` | 雷达数据格式：Frame结构、Point Cloud、Radar Cube | ⭐⭐⭐⭐ **高** | 📖 **第1/2章**：理解雷达数据流 |
+| `introduction/fundamentals.html` | FMCW原理：Chirp、距离/速度/角度估计 | ⭐⭐⭐ 中等 | ℹ️ 背景知识 |
+| `introduction/terminology.html` | 术语表：SDK专业名词解释 | ⭐⭐⭐ 中等 | ℹ️ 查阅参考 |
+| `integration/antenna_design.html` | 天线设计基础 | ⭐⭐ 低 | ℹ️ 深度优化时参考 |
+
+#### 关键内容速览
+
+**📘 Tracking with GTRACK (tracking.html)**：
+```
+GTRACK Flow:
+Point Cloud Input → Predict → Associate → Allocate → Update → Output Tracks
+
+关键图示：
+- Figure 1: Tracker在处理链中的位置
+- Figure 2: Point Cloud与Track的关系可视化
+- Figure 3: GTRACK算法完整流程图
+```
+
+**📘 Motion and Presence Detection (motion_presence_detection.html)**：
+```
+状态机模型：
+Empty State → Major State → Minor State → Empty State
+
+关键参数：
+- pointThre1/pointThre2: 点数阈值
+- snrThre2: SNR阈值
+- histBufferSize: 历史缓冲区大小（帧数）
+- major2minorThre: Major→Minor转换阈值
+```
+
+---
+
 ### E.3 参考资料与章节对应关系
 
 | 章节 | 必读参考 | 备用参考 |
 |------|---------|--------|
-| **第1章 环境搭建** | SDK安装文档、InCabin Demo User Guide | Migration索引(硬件对比)、TI校准指南 |
-| **第2章 人存检测** | InCabin Demo源码 | motion_detect.c |
+| **第1章 环境搭建** | SDK安装文档、InCabin Demo User Guide、⭐ **Radar Academy: radar_data.html** | Migration索引(硬件对比)、TI校准指南 |
+| **第2章 人存检测** | InCabin Demo源码、⭐ **Radar Academy: motion_presence_detection.html** | motion_detect.c |
 | **第3章 姿态检测** | ⭐ **pose.c/h**、**数据集** | dpc.c |
 | **第4章 跌倒检测** | ⭐ **fall_detection.html**、pose.c | Migration Part3(相位) |
 | **第5章 杂波移除** | ⭐ **Point Cloud Tuning Guide**、**Parameter Tuning Guide**、**3D Detection Layer Tuning** | TI校准指南、AOA校正DPU |
 | **第6章 背景学习** | ⭐ **Parameter Tuning Guide** (Reference Zone概念) | 自主设计扩展 |
 | **第7章 区域划分** | ⭐ **zoneDefinitionGenTool.xlsx**、**Parameter Tuning Guide** Section 2.3.1 | cuboidDef格式参考 |
 | **第8章 呼吸检测** | IWR6843 Vital Signs Demo | - |
-| **第9章 人数统计** | ⭐ **3D_people_tracking_demo_implementation_guide**、**tracker_layer_tuning**、**people_counting_customization** | Tracking_radar_targets详解 |
+| **第9章 人数统计** | ⭐ **3D_people_tracking实现指南**、**tracker_layer_tuning**、⭐ **Radar Academy: tracking.html** | people_counting_customization、Tracking_radar_targets |
 | **第10章 综合测试** | ⭐ **数据集**、**CPD_SBR_Test_Results**、**实验案例** | 验收标准参考 |
 
 ---
