docs: 完整扫描C:\ti目录-添加所有TI资源参考
扫描范围: C:\ti下9个目录
新发现资源:
- E.1: 添加Radar Toolbox和mmWave Studio到来源表
- E.2.7: MMWAVE_L_SDK官方文档
  - mmWave_Demo_Tuning_Guide.md ⭐⭐⭐⭐⭐ (36页调优手册)
  - api_guide_xwrL684x完整API文档
- E.2.8: Radar Toolbox调优指南集
  - presence_detection_tuning ⭐⭐⭐⭐⭐
  - tracker_tuning ⭐⭐⭐⭐⭐
  - motion_sensitivity_tuning ⭐⭐⭐⭐
  - 应用文档(fall_detection/vital_signs/occupancy)
- E.2.9: mmWave Studio文档(备用)
- E.3: 完整更新章节对应表(10章全覆盖)

--- a/项目文档/3-固件工具/08-AWRL6844雷达健康检测实现方案/AWRL6844雷达健康检测-03-实施目录大纲.md
+++ b/项目文档/3-固件工具/08-AWRL6844雷达健康检测实现方案/AWRL6844雷达健康检测-03-实施目录大纲.md
@@ -1445,8 +1445,10 @@ AWRL6844_HealthDetect/
 | **知识库Pose_And_Fall** | `知识库/Pose_And_Fall_Detection/` | 源码+数据集+模型 |
 | **知识库PDF转机器可读文件** | `知识库/知识库PDF转机器可读文件/` | TI官方文档(53个MD文件) |
 | **SDK InCabin Demo** | `C:\ti\radar_toolbox\...\AWRL6844_InCabin_Demos/` | 基础工程 |
-| **MMWAVE_L_SDK** | `C:\ti\MMWAVE_L_SDK_06_01_00_01/` | SDK库+工具 |
+| **MMWAVE_L_SDK** | `C:\ti\MMWAVE_L_SDK_06_01_00_01/` | SDK库+工具+API文档 |
 | ⭐ **TI Radar Academy** | `C:\ti\radar_academy_3_10_00_1/` | **雷达基础教程+算法讲解** |
+| ⭐ **Radar Toolbox** | `C:\ti\radar_toolbox_3_30_00_06/` | **应用文档+调优指南** |
+| **mmWave Studio** | `C:\ti\mmwave_studio_04_03_01_00/` | 调试工具+Lua API |
 
 ---
 
@@ -1590,20 +1592,93 @@ Empty State → Major State → Minor State → Empty State
 
 ---
 
-### E.3 参考资料与章节对应关系
+### E.2.7 ⭐ MMWAVE_L_SDK 官方文档（新增）
+
+> **位置**：`C:\ti\MMWAVE_L_SDK_06_01_00_01\docs\`
+> **重要性**：SDK官方调优指南和API文档！
+
+#### SDK核心文档
+
+| 文档路径 | 内容概述 | 参考价值 | 适用章节 |
+|---------|---------|---------|---------|
+| `docs/mmWave_Demo_Tuning_Guide.md` | **xWRL6844 mmWave Demo调优指南v2.0** - 36页完整调优手册 | ⭐⭐⭐⭐⭐ **最高** | 📖 **第2-7章全部**：信号处理链、CLI参数、CFAR、杂波移除 |
+| `docs/Low_Power_Visualizer_User_Guide.md` | 低功耗可视化工具使用 | ⭐⭐⭐ 中等 | 📖 **第10章**：调试验证工具 |
+| `docs/api_guide_xwrL684x/` | **完整API文档** - DPU/驱动/内核 | ⭐⭐⭐⭐ **高** | 📖 **全部章节**：API查阅参考 |
+
+#### mmWave_Demo_Tuning_Guide 核心章节
+
+| 章节 | 内容 | 直接可用内容 |
+|------|------|-------------|
+| **Section 2** | Signal Processing Algorithm | 信号处理流程图、MIMO解调 |
+| **Section 3.1** | Sensor Front-End Parameters | Chirp配置、Frame配置、Low-Power模式 |
+| **Section 3.2** | Detection Layer Parameters | **CFAR配置、ROI配置、Clutter Removal** |
+| **Section 3.2.6** | Range Bias and Phase Compensation | 相位补偿配置方法 |
+| **Section 4** | Parameter Tuning and Performance | 距离配置、运动灵敏度配置、角度精度配置 |
+
+---
+
+### E.2.8 ⭐ Radar Toolbox 调优指南集（新增）
+
+> **位置**：`C:\ti\radar_toolbox_3_30_00_06\software_docs\`
+> **重要性**：TI官方调优指南合集！
+
+#### 调优指南索引
+
+| 文档路径 | 内容概述 | 参考价值 | 适用章节 |
+|---------|---------|---------|---------|
+| `Tuning_Guides/presence_detection_tuning/` | **存在检测调优** | ⭐⭐⭐⭐⭐ **最高** | 📖 **第2章**：人存检测参数 |
+| `Tuning_Guides/motion_sensitivity_tuning/` | **运动灵敏度调优** | ⭐⭐⭐⭐ **高** | 📖 **第2/5章**：检测灵敏度 |
+| `Tuning_Guides/tracker_tuning/` | **Tracker调优** | ⭐⭐⭐⭐⭐ **最高** | 📖 **第9章**：人数跟踪 |
+| `Tuning_Guides/range_tuning/` | **距离调优** | ⭐⭐⭐ 中等 | 📖 **第5章**：检测范围 |
+| `Tuning_Guides/power_tuning/` | **功耗调优** | ⭐⭐ 低 | ℹ️ 低功耗场景参考 |
+| `Low_Power_SDK_Guides/` | 低功耗SDK指南（4个文档） | ⭐⭐ 低 | ℹ️ 低功耗模式参考 |
+
+#### 应用参考文档
+
+| 文档路径 | 内容概述 | 参考价值 | 适用章节 |
+|---------|---------|---------|---------|
+| `applications/industrial/medical/fall_detection.html` | **跌倒检测应用** | ⭐⭐⭐⭐ **高** | 📖 **第4章**：跌倒检测背景 |
+| `applications/industrial/medical/vital_signs_monitoring.html` | 生命体征监测 | ⭐⭐⭐ 中等 | 📖 **第8章**：呼吸检测参考 |
+| `applications/industrial/building_automation_and_lighting/occupancy_sensing_and_lighting.html` | 占用感应 | ⭐⭐⭐ 中等 | 📖 **第2章**：人存检测场景 |
+| `applications/automotive/in-cabin_security_and_safety/in-cabin_sensing_overview.html` | In-Cabin概述 | ⭐⭐⭐ 中等 | 📖 **第1章**：项目背景 |
+
+#### 其他有用文档
+
+| 文档 | 用途 |
+|------|------|
+| `Understanding_UART_Data_Output_Format.html` | UART数据格式解析 |
+| `Debugging_with_CCS_20.html` | CCS 20调试方法 |
+| `using_uniflash_with_mmwave.html` | UniFlash烧录指南 |
+
+---
+
+### E.2.9 mmWave Studio 文档（备用）
+
+> **位置**：`C:\ti\mmwave_studio_04_03_01_00\docs\`
+> **重要性**：调试工具文档，按需查阅
+
+| 文档 | 参考价值 | 用途 |
+|------|---------|------|
+| `mmwave_studio_user_guide.md` | ⭐⭐ 低 | mmWave Studio使用指南 |
+| `mmwave_studio_lua_api_documentation.md` | ⭐⭐ 低 | Lua脚本API |
+| `DCA1000_Quick_Start_Guide.md` | ⭐ 最低 | DCA1000硬件（不适用） |
+
+---
+
+### E.3 参考资料与章节对应关系（完整版）
 
 | 章节 | 必读参考 | 备用参考 |
 |------|---------|--------|
-| **第1章 环境搭建** | SDK安装文档、InCabin Demo User Guide、⭐ **Radar Academy: radar_data.html** | Migration索引(硬件对比)、TI校准指南 |
-| **第2章 人存检测** | InCabin Demo源码、⭐ **Radar Academy: motion_presence_detection.html** | motion_detect.c |
+| **第1章 环境搭建** | SDK安装文档、InCabin Demo User Guide、⭐ **Radar Academy: radar_data.html**、⭐ **in-cabin_sensing_overview.html** | Migration索引(硬件对比)、TI校准指南、Debugging_with_CCS_20.html |
+| **第2章 人存检测** | InCabin Demo源码、⭐ **Radar Academy: motion_presence_detection.html**、⭐ **presence_detection_tuning_guide.html**、⭐ **motion_sensitivity_tuning** | motion_detect.c、occupancy_sensing_and_lighting.html |
 | **第3章 姿态检测** | ⭐ **pose.c/h**、**数据集** | dpc.c |
-| **第4章 跌倒检测** | ⭐ **fall_detection.html**、pose.c | Migration Part3(相位) |
-| **第5章 杂波移除** | ⭐ **Point Cloud Tuning Guide**、**Parameter Tuning Guide**、**3D Detection Layer Tuning** | TI校准指南、AOA校正DPU |
-| **第6章 背景学习** | ⭐ **Parameter Tuning Guide** (Reference Zone概念) | 自主设计扩展 |
-| **第7章 区域划分** | ⭐ **zoneDefinitionGenTool.xlsx**、**Parameter Tuning Guide** Section 2.3.1 | cuboidDef格式参考 |
-| **第8章 呼吸检测** | IWR6843 Vital Signs Demo | - |
-| **第9章 人数统计** | ⭐ **3D_people_tracking实现指南**、**tracker_layer_tuning**、⭐ **Radar Academy: tracking.html** | people_counting_customization、Tracking_radar_targets |
-| **第10章 综合测试** | ⭐ **数据集**、**CPD_SBR_Test_Results**、**实验案例** | 验收标准参考 |
+| **第4章 跌倒检测** | ⭐ **fall_detection.html**(toolbox)、pose.c | Migration Part3(相位) |
+| **第5章 杂波移除** | ⭐ **mmWave_Demo_Tuning_Guide.md Section 3.2**、**Point Cloud Tuning Guide**、**Parameter Tuning Guide**、**3D Detection Layer Tuning** | TI校准指南、AOA校正DPU、range_tuning |
+| **第6章 背景学习** | ⭐ **Parameter Tuning Guide** (Reference Zone概念)、⭐ **mmWave_Demo_Tuning_Guide.md Section 3.2.4** | 自主设计扩展 |
+| **第7章 区域划分** | ⭐ **zoneDefinitionGenTool.xlsx**、**Parameter Tuning Guide** Section 2.3.1、⭐ **mmWave_Demo_Tuning_Guide.md Section 3.2.3** | cuboidDef格式参考 |
+| **第8章 呼吸检测** | IWR6843 Vital Signs Demo、⭐ **vital_signs_monitoring.html** | - |
+| **第9章 人数统计** | ⭐ **3D_people_tracking实现指南**、**tracker_layer_tuning**、⭐ **Radar Academy: tracking.html**、⭐ **Tracker_Tuning_Guide.html** | people_counting_customization、Tracking_radar_targets |
+| **第10章 综合测试** | ⭐ **数据集**、**CPD_SBR_Test_Results**、**实验案例**、**Low_Power_Visualizer_User_Guide.md** | 验收标准参考、Understanding_UART_Data_Output_Format.html |
 
 ---
 
