docs: 同步更新第1章-添加新发现的TI资源
更新内容:
- 1.1.1: 工具表添加TI Radar Academy (3.10.00.1)
- 1.1.4: Radar Toolbox目录说明添加software_docs/Tuning_Guides
- 1.1.5: 新增TI Radar Academy章节(强烈推荐)
  - 核心教程模块介绍(GTRACK/存在检测/雷达数据)
  - 学习顺序建议
- 1.1.7: XDS110驱动(原1.1.6编号修正)
- 参考资源: 按大纲E.3添加必读和备用参考
  - 必读: radar_data.html, in-cabin_sensing_overview.html
  - 备用: Debugging_with_CCS_20.html, Migration索引

--- a/项目文档/3-固件工具/08-AWRL6844雷达健康检测实现方案/AWRL6844雷达健康检测-04-第1章-环境搭建.md
+++ b/项目文档/3-固件工具/08-AWRL6844雷达健康检测实现方案/AWRL6844雷达健康检测-04-第1章-环境搭建.md
@@ -49,6 +49,7 @@
 | **Code Composer Studio (CCS)** | 20.4.0 (ccs2040) | TI嵌入式开发IDE                     | ✅ 已安装 |
 | **MMWAVE_L_SDK**               | 06_01_00_01      | 毫米波SDK                           | ✅ 已安装 |
 | **Radar Toolbox**              | 3.30.00.06       | 雷达开发工具包                      | ✅ 已安装 |
+| **TI Radar Academy**           | 3.10.00.1        | ⭐ **雷达学习教程**（强烈推荐） | ✅ 已安装 |
 | **SDK Visualizer**             | 6.0.5.1          | ⭐**首选推荐烧录工具**（GUI） | ✅ 已安装 |
 | **项目flash_tool.py**          | v1.4.1           | 自动化烧录工具（封装arprog）        | ✅ 已安装 |
 | **SysConfig**                  | 1.20.0           | 系统配置工具                        | ✅ 已安装 |
@@ -157,13 +158,41 @@ C:\ti\radar_toolbox_3_30_00_06/
 │           ├── docs/                        # 用户指南
 │           ├── prebuilt_binaries/           # 预编译固件
 │           └── src/                         # 源代码
+├── software_docs/                           # ⭐ 调优指南集（新发现）
+│   └── Tuning_Guides/                       # 各种调优指南
 ├── tools/
 │   ├── visualizers/                         # 可视化工具
 │   └── mmwave_data_recorder/                # 数据记录工具
 └── applications/                            # 应用示例
 ```
 
-### 1.1.5 烧录工具说明
+### 1.1.5 ⭐ TI Radar Academy（强烈推荐）
+
+> 💡 **新发现资源**：TI官方雷达培训教程，包含算法原理讲解和配图！
+
+**安装路径**：
+
+```
+C:\ti\radar_academy_3_10_00_1\
+```
+
+**访问方式**：打开 `_build_radar_academy_3_10_00_1\index.html`
+
+#### 核心教程模块
+
+| 模块 | 内容 | 本项目价值 |
+|------|------|-----------|
+| **Tracking with GTRACK** | GTRACK算法详解、流程图、参数调优 | ⭐⭐⭐⭐⭐ 第9章必读 |
+| **Motion and Presence Detection** | 存在检测状态机、majorStateCfg配置 | ⭐⭐⭐⭐⭐ 第2章必读 |
+| **What Does Radar Data Look Like?** | 雷达数据格式、处理链、Frame结构 | ⭐⭐⭐⭐ 本章推荐 |
+| **How Does Radar Work?** | FMCW基础原理、Chirp概念 | ⭐⭐⭐ 入门参考 |
+
+**建议学习顺序**：
+1. 📖 `radar_data.html` - 理解雷达数据格式（本章）
+2. 📖 `motion_presence_detection.html` - 存在检测原理（第2章）
+3. 📖 `tracking.html` - 跟踪算法原理（第9章）
+
+### 1.1.6 烧录工具说明
 
 #### 烧录工具对比
 
@@ -221,7 +250,7 @@ C:\ti\MMWAVE_L_SDK_06_01_00_01\docs\Low_Power_Visualizer_User_Guide.pdf
 - ❌ 不支持AWRL6844特殊的Flash分区格式化
 - ❌ 项目实测从未成功
 
-### 1.1.6 XDS110驱动安装
+### 1.1.7 XDS110驱动安装
 
 #### 下载地址
 
@@ -959,6 +988,24 @@ Start-Process "C:\ti\MMWAVE_L_SDK_06_01_00_01\tools\visualizer\visualizer.exe"
 ---
 
 ## 📚 参考资源
+
+### ⭐ 本章推荐阅读（来自目录大纲E.3）
+
+> **必读参考**：
+
+| 资源 | 位置 | 用途 |
+|------|------|------|
+| **InCabin Demo User Guide** | `{Radar Toolbox}/.../AWRL6844_InCabin_Demos/docs/User_Guide.html` | Demo使用指南 |
+| ⭐ **Radar Academy: radar_data.html** | `C:\ti\radar_academy_3_10_00_1\...\introduction\radar_data.html` | 雷达数据格式讲解 - Frame结构、Point Cloud概念 |
+| ⭐ **in-cabin_sensing_overview.html** | `C:\ti\radar_toolbox_3_30_00_06\applications\automotive\in-cabin_security_and_safety\` | InCabin应用概述 - 项目背景理解 |
+
+> **备用参考**（遇到问题时查阅）：
+
+| 资源 | 位置 | 用途 |
+|------|------|------|
+| **Migration索引** | `项目文档/3-固件工具/07-跌倒检测研究/` | 硬件对比 - xWRL6432到6844 |
+| **Debugging_with_CCS_20.html** | `C:\ti\radar_toolbox_3_30_00_06\software_docs\` | CCS 20调试方法 |
+| **TI校准指南** | `知识库/知识库PDF转机器可读文件/` | 相位校准、温度补偿 |
 
 ### 在线资源
 
